--- a/firebasejs/css/styles.css
+++ b/firebasejs/css/styles.css
@@ -2,9 +2,310 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	list-style-type: none;
+	text-decoration: none;
 }
 
 body {
 	font-family: 'Roboto', sans-serif;
-	color: #51575B;
+	text-align: center;
+
+}
+
+.container{
+	margin: 1em auto;
+	/* padding: 0 1em; */
+}
+
+.navContainer h1{
+	font-size: 50px;
+	opacity: 0.7;
+
+}
+
+nav{
+	margin-bottom: 2.5em;
+}
+
+a{
+	color: grey;
+}
+
+nav ul{
+	display: flex;
+	justify-content: center;
+	margin-top: .5em;
+}
+
+nav li{
+	padding: 1em;
+}
+
+nav button{
+	width: 15%;
+	display: none;
+}
+
+button{
+	outline: none;
+}
+
+.flex-title{
+	display: inline-block;
+	justify-content: center;
+	margin-top: 1.5em;
+}
+
+.flex-title h1{
+	padding-bottom: .3em;
+}
+
+.flex-star{
+	margin: 0 auto;
+	width:45%;
+}
+
+.flex-content h1{
+	display: none;
+}
+
+.svgdiv{
+	margin:0 auto;
+}
+
+.star{
+	height: 13px;
+	opacity: 0.5;
+	float: left;
+}
+
+.svgimage{
+	display: inline-block;
+	height: 30px;
+	padding-left: 5px;
+	opacity: 0.5;
+}
+
+   /**********/
+  /* header */
+ /***********/
+
+ header{
+	/* margin-top: 1em; */
+	padding: 0 1.5em 3em 1em;
+	color: rgb(102, 101, 101);
+	/* padding-bottom: 3em; */
+}
+
+.navContainer p,
+.flex-icons{
+	color: grey;
+}
+
+button{
+	width: 100%;
+	height: 2.5em;
+	border-radius: 8px;
+	background-color: darkturquoise;
+	color: white;
+	font-size: larger;
+	margin-top: 1em;
+}
+
+.main-content{
+	margin: 0 auto;
+	height: 100% ;
+	background-color: rgb(73, 72, 72);
+	border-top:  5px solid rgb(250, 169, 19);
+	padding-bottom: 6em;
+}
+
+.title{
+	margin: 5em auto;
+	font-weight: 1000;
+	color: snow;
+	width: 80%;
+}
+
+.title span{
+	color: rgb(250, 169, 19);
+}
+
+.firelogopic{
+	width: 350px;
+}
+
+.section{
+	text-align: left;
+	padding: 1em;
+	max-width: 200px;
+	margin: 2em auto;
+}
+
+.section h3 {
+	color: rgb(250, 169, 19);
+	padding-bottom: .3em;
+}
+
+.section p{
+	color: snow;
+}
+.clearfix{
+	content: "";
+	clear: both;
+	display: block;
+}
+  /*****************/
+ /* MEDIA QUERIES */
+/*****************/
+
+@media(min-width:768px){
+
+	.navContainer{
+		max-width: 800px;
+	}
+
+	.flex-nav {
+		display: flex;
+		justify-content: space-between;
+		margin: 0 auto;
+		width: 100%;
+		/* max-width: 900px; */
+	}
+
+	.flex-star{
+		margin: 0;
+	}
+
+	.flex-icons{
+		display: flex;
+		justify-content: space-between;
+		/* margin-left: 6em; */
+	}
+
+	
+	nav ul{
+		margin-right: 5em;
+	}
+
+	img[src*="twitter"]{
+		padding-right: 2em;
+	}
+
+	.svgdiv{
+		display: flex;
+		margin-right: 1em;
+	}
+
+	.svgdiv button{
+		box-shadow: 3px 3px 5px black;
+	}
+	
+	nav button{
+		display: inline-block;
+		height: 30px;
+		width: 75%;
+		/* margin-right: 2em; */
+		padding: 0 1em;
+		/* float: right; */
+	}
+
+	.flex-star p{
+		width: 85px;
+		font-size: 13px;
+	}
+
+	.flex-title{
+		margin-left: 1em;
+	}
+
+	.flex-title h1 {
+		font-size:20px;
+	}
+
+	.svgimage{
+		align-self: center;
+		margin-top: 1em;
+	}
+
+	.flex-content{
+	max-width:500px;
+	margin: 5em auto;
+	text-align: left;
+
+	}
+
+	.flex-content h1{
+	display: unset;
+	font-size: 60px;
+	text-shadow: 1px 2px 2px  black;
+	}
+
+	.flex-content p{
+		margin: 1em;
+	}
+
+	.flex-content button{
+	max-width: 125px;
+	}
+
+	.firelogopic{
+		width: 450px;
+	}
+
+	.main-content{
+		height:50em;
+	}
+
+	.container{
+		max-width: 750px;
+		margin: 0 auto;
+	}
+
+	.section{
+		float: left;
+		color: black;
+		max-width: 240px;
+	}
+}
+
+@media(min-width:900px){
+
+	body{
+		max-height: fit-content;
+	}
+
+	.main-content {
+		max-width: 90%;
+		/* max-height: 1000px; */
+		margin-bottom: 2em;
+	}
+
+	
+
+
+	.flex-nav{
+		max-width: 1000px;
+	}
+
+	.flex-image {
+		display: flex;
+		width: 90%;
+		margin: 0 auto;
+		max-width: 1200px;
+	}
+
+	.flex-icons{
+		margin: 0 auto;
+	}
+
+	.flex-content{
+		margin-top: 7em;
+	}
+
+	.svgdiv{
+		margin-left: 10em;
+	}
+
+	
 }
